Fixed text breaking on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -308,6 +308,7 @@ li {
 
 .works-cited>li {
 	margin-bottom: 6px;
+	overflow-wrap: anywhere;
 }
 
 br {
